<resources>
    <string name="app_name">Activize</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Place Search</string>
    <string name="search_hint">Search address or place</string>
    <string name="menu_search">Search</string>
    <string name="address_search">Searching for Address</string>
    <string name="addressSearchFailed">Address search failed</string>
    <string name="noResultsFound">No results found</string>
    <string name="hint_event_name">Event Name</string>
    <string name="hint_event_description">Description</string>
    <string name="hint_event_time">Time</string>
    <string name="hint_event_date">Date</string>
    <string name="btn_create">Create</string>
    <string name="input_location">Location</string>
    <string name="err_msg_event_name">Enter an event name</string>
    <string name="err_msg_description">Event must have a description</string>
    <string name="err_msg_time">Event must have a valid time</string>
    <string name="err_msg_date">Event must have a valid date</string>
    <string name="title_activity_place_picker">PlacePicker</string>
    <string name="select_prompt">Select this location?</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_event_page">EventPage</string>
    <string-array name="options_array">
        <item>"First Aid"</item>
        <item>"Water Fountain"</item>
        <item>"Police"</item>
    </string-array>

</resources>
